Cros splitscreen: Ignore the window bounds change transition transform if the window is in overview mode.

Bug: 817557
Change-Id: Ibb1a048261a97fb9265e9b4330b3bbf9f21a65c8
Reviewed-on: https://chromium-review.googlesource.com/942090
Commit-Queue: Xiaoqian Dai <xdai@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Cr-Commit-Position: refs/heads/master@{#540386}
Former-commit-id: 30048681898250b814d7aff35b3d2d93fefb26c1